# jni-demo

./: pom.xml
doc/: readme.md  tools.md
src/main/c/: CMakeLists.txt  LogicMap.cpp  LogicMap.h  com_upchina_Hello.h  com_upchina_LogicMap.h  shawn.cpp
src/main/java/com/upchina/: Hello.java  Library.java  LogicMap.java  Main.java
